update page after umd attendance. need to update project/teaching

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
+@article{network_hatespeech,
+  title={Network interventions to reduce hate speech on Twitter},
+  author={Eaman Jahani, Blas Kolic, Manuel Tonneau, Hause Lin, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger},
+  abstract={
+	As social media platforms become an increasingly inseparable part of our social structure, there are growing concerns about the prevalence of hate content on these platforms. Several social media companies have embarked on content moderation, through activities such as content removal or user bans, as a way to combat online hate speech. Existing evidence as to whether these punitive measures are effective at reducing hate speech are mixed. We describe a network-based experiment designed to measure the effectiveness of empathy-based counterspeech and celebrity messaging in curbing hateful language within the entire Nigerian Twitter Population. The experiment design follows graph cluster randomization which accounts for interference between units. The design notably allows us to identify both the spillover and direct treatment effects with Horvitz-Thompson and Hajek estimators. The star-like structure and degree distribution in the Twitter network pose considerable challenges to achieving precise estimations. Subsequently we discuss several techniques that we implemented to reduce the variance of ATE, including a weighted exposure model, difference estimation and construction of more cohesive clusters.
+	},
+	category={Working papers}
+}
+
+
 @article{unequal_diffusion,
   title={Network Structure of Unequal Diffusion},
-  author={Jahani, Eaman and Eckles, Dean, and Pentland, Alex},
+  author={Eaman Jahani, Dean Eckles, and Alex Pentland},
 	abstract={
 	We develop a theoretical network model that captures the network structure of unequal
 	diffusion.  First, we argue that homophily alone does not fully
@@ -25,7 +35,7 @@
 
 @article{long_ties_fundraising,
   title={Tie Strength and Length in Social Capital: Evidence from Charitable Fundraising},
-  author={Jahani, Eaman and Bailey, Michael and Eckles, Dean},
+  author={Eaman Jahani, Michael Bailey, and Dean Eckles},
 	abstract={
 		We contribute to the literature on network structure and performance by studying the
 		local network structure around individuals with the best outcomes. We propose the
@@ -44,7 +54,7 @@
 
 @article{inequality_experiment,
   title={Rivalrous Resource Sharing in Networks can Exacerbate Existing Inequalities},
-  author={Jahani, Eaman and Eckles, Dean},
+  author={Eaman Jahani, Dean Eckles},
 	abstract={
 		We examine the network mechanisms that widen inter-group differences and lead to different
 		levels of  social capital in different groups. We study an information sharing game, in
@@ -64,7 +74,7 @@
 
 
 @article{long_ties_formation,
-  author = {Eaman Jahani  and Samuel P. Fraiberger  and Michael Bailey  and Dean Eckles },
+  author = {Eaman Jahani  and Samuel P. Fraiberger  and Michael Bailey  and Dean Eckles},
   title = {Long ties, disruptive life events, and economic prosperity},
   journal = {Proceedings of the National Academy of Sciences},
   volume = {120},
@@ -72,7 +82,6 @@
   pages = {e2211062120},
   year = {2023},
   doi = {10.1073/pnas.2211062120},
-  URL = {https://www.pnas.org/doi/abs/10.1073/pnas.2211062120},
   eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.2211062120},
   abstract = {Social networks shape and reflect economic life. Prior studies have
   identified long ties, which connect people who lack mutual contacts, as a correlate of
@@ -95,13 +104,14 @@
   contacts many years after the event. Overall, these results suggest that long ties
   are robustly associated with economic prosperity and highlight roles for important
   life experiences in developing and maintaining long ties.},
+  html={https://www.pnas.org/doi/abs/10.1073/pnas.2211062120},
 	category={Refereed}
 }
 
 
 @article{yuan2023implications,
   title={Implications of COVID-19 vaccination heterogeneity in mobility networks},
-  author={Yuan, Yuan and Jahani, Eaman and Zhao, Shengjia and Ahn, Yong-Yeol and Pentland, Alex Sandy},
+  author={Yuan Yuan,Eaman Jahani, Shengjia Zhao, Yong-Yeol Ahn, Alex Pentland},
   journal={Communications Physics},
   volume={6},
   number={1},
@@ -121,6 +131,7 @@
   the interaction between vaccination patterns and mobility networks, suggesting that
   grasping geographical vaccine uptake variations could be as crucial as raising the
   overall vaccination rate.},
+  html={https://www.nature.com/articles/s42005-023-01325-7},
 	category={Refereed}
 }
 
