remove projects and update papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,18 @@
+@article{prompt_engineering,
+  title={As Generative Models Improve, We Must Adapt Our Prompts},
+  author={Eaman Jahani, Benjamin Manning, Joe Zhang, Hong-Yi TuYe, Mohammed Alsobay, Christos Nicolaides, Siddharth Suri, David Holtz},
+  abstract={
+  In an online experiment with N = 1893 participants, we collected and analyzed over 18,000 prompts and 300,000 images to explore whether prompting needs to adapt as generative AI models evolve. Participants were randomly assigned to use DALL-E 2 or  its advanced successor DALL-E 3. Each participant wrote prompts to reproduce a target image as closely as possible across 10 consecutive attempts. We find that participants using DALL-E 3 outperformed those using DALL-E 2, with the performance gap driven equally by: (1) the increased technical capabilities of DALL-E 3, and (2) endogenous changes in participants' prompting in response to these increased capabilities. Furthermore, participants across all skill levels learned to adapt their prompts to new models quickly, with minimal training. These findings suggest that as AI models continue to improve, firms will need to maintain and update their technical infrastructure and prompts. However, these adjustments will not be prohibitively complex, reducing the need for costly prompt engineering expertise. The implications for businesses are substantial, as the ability to easily adapt prompts may democratize access to AI’s benefits, mitigating concerns about inequality in the AI-driven economy.
+	},
+	category={Working papers},
+  html={https://arxiv.org/abs/2407.14333},
+}
+
 @article{network_hatespeech,
-  title={Network interventions to reduce hate speech on Twitter},
+  title={Network interventions to increase social cohesion},
   author={Eaman Jahani, Blas Kolic, Manuel Tonneau, Hause Lin, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger},
   abstract={
-	As social media platforms become an increasingly inseparable part of our social structure, there are growing concerns about the prevalence of hate content on these platforms. Several social media companies have embarked on content moderation, through activities such as content removal or user bans, as a way to combat online hate speech. Existing evidence as to whether these punitive measures are effective at reducing hate speech are mixed. We describe a network-based experiment designed to measure the effectiveness of empathy-based counterspeech and celebrity messaging in curbing hateful language within the entire Nigerian Twitter Population. The experiment design follows graph cluster randomization which accounts for interference between units. The design notably allows us to identify both the spillover and direct treatment effects with Horvitz-Thompson and Hajek estimators. The star-like structure and degree distribution in the Twitter network pose considerable challenges to achieving precise estimations. Subsequently we discuss several techniques that we implemented to reduce the variance of ATE, including a weighted exposure model, difference estimation and construction of more cohesive clusters.
+	As social media platforms become an increasingly inseparable part of our social structure, there are growing concerns about the prevalence of hate content on these platforms. Several social media companies have embarked on content moderation, through activities such as content removal or user bans, as a way to combat online hate speech. Existing evidence as to whether these punitive measures are effective at reducing hate speech are mixed. We describe a network-based experiment designed to measure the effectiveness of empathy-based counterspeech and celebrity messaging in curbing hateful language within the entire Nigerian social media landscape. The experiment design follows graph cluster randomization which accounts for interference between units. The design notably allows us to identify both the spillover and direct treatment effects with Horvitz-Thompson and Hajek estimators. The star-like structure and degree distribution in the network pose considerable challenges to achieving precise estimations. Subsequently we discuss several techniques that we implemented to reduce the variance of ATE, including a weighted exposure model, difference estimation and construction of more cohesive clusters.
 	},
 	category={Working papers}
 }
